Update spigot_init.sh