@@ -26,6 +26,6 @@ chown -R minecraft.minecraft /$SPIGOT_HOME/
 
 
 cd /$SPIGOT_HOME/
-su - minecraft -c 'java -Xmx$JAVA_XMX -Xms$JAVA_XMS -XX:MaxPermSize=$JAVA_PERMSIZE -jar spigot.jar'
+su - minecraft -c "java $MINECRAFT_OPTS -jar spigot.jar"
 bash
 
